--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Jarrettgohh.github.io/Personal-Website",
+  "homepage": "https://Jarrettgohh.github.io/Personal-Website/",
   "name": "personal-website",
   "version": "0.1.0",
   "private": true,
