--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.6.2",
+    "url-parse": "^1.5.10",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
