--- a/package.json
+++ b/package.json
@@ -12,8 +12,16 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "ansi-regex": "^5.0.0",
     "bootstrap": "^4.6.0",
+    "follow-redirects": "^1.14.9",
     "font-awesome": "^4.7.0",
+    "is-svg": "^3.0.0",
+    "json-schema": "^0.2.3",
+    "nanoid": "^3.3.1",
+    "node-forge": "^0.10.0",
+    "nth-check": "^1.0.2",
+    "postcss": "^7.0.35",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
@@ -21,6 +29,7 @@
     "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "tmpl": "^1.0.5",
     "typescript": "^4.6.2",
     "url-parse": "^1.5.10",
     "web-vitals": "^1.1.0"
