--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
-    "ansi-regex": "^5.0.0",
+    "ansi-regex": "^5.0.1",
     "bootstrap": "^4.6.0",
     "follow-redirects": "^1.14.9",
     "font-awesome": "^4.7.0",
+    "glob-parent": "^5.1.2",
+    "immer": "^8.0.1",
     "is-svg": "^3.0.0",
     "json-schema": "^0.2.3",
     "nanoid": "^3.3.1",
     "node-forge": "^0.10.0",
     "nth-check": "^1.0.2",
-    "postcss": "^7.0.35",
+    "path-parse": "^1.0.7",
+    "postcss": "^7.0.39",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
@@ -29,10 +32,16 @@
     "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "tar": "^6.1.11",
     "tmpl": "^1.0.5",
     "typescript": "^4.6.2",
     "url-parse": "^1.5.10",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "ws": "^7.4.4",
+    "browserslist": "^4.16.5",
+    "hosted-git-info": "^2.8.9",
+    "ssri": ">=6.0.2",
+    "react-dev-utils": "^11.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
